Fix logo not showing on login page on mobile

--- a/src/pages/login/Login.module.css
+++ b/src/pages/login/Login.module.css
@@ -1,7 +1,8 @@
 .logo {
-  width: 20.1rem;
   height: 7.5rem;
+  margin-top: 10rem;
   padding: 1.6rem;
+  width: 20.1rem;
 }
 
 .leftContainer {
